--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.336.0",
+    "mongoose": "^8.3.3",
+    "mongose": "^0.0.2-security",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
