--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@radix-ui/react-switch": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "express": "^4.19.2",
     "lucide-react": "^0.336.0",
-    "mongoose": "^8.3.3",
+    "mongoose": "^8.4.1",
     "mongose": "^0.0.2-security",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
